# Url-Shortener

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
core/: __init__.py  schema.sql  url_shortener.py
core/static/: style.css
core/templates/: base.html
core/templates/url_shortener/: index.html
tests/: conftest.py  data.sql
